--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 *{
     background-color: antiquewhite;
 }
+
+section{
+    align-items: center;
+}
+
+h1{
+    font-size: 50px;
+}
+span{
+    font-size: 120px;
+    font: bold;
+}
