--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,46 @@
-*{
-    background-color: antiquewhite;
+html{
+    box-sizing: border-box;
+    height: 100%;
 }
 
-section{
+*,
+*::before,
+*::after{
+    box-sizing: inherit;
+    margin: 15px;
+    padding: 0;
+}
+
+
+body{
+    display: grid;
     align-items: center;
+    background-color: antiquewhite;
+    height: auto;
+    justify-content: center;
 }
 
-h1{
-    font-size: 50px;
-}
+h1{ font-size: 50px; }
 span{
     font-size: 120px;
     font: bold;
 }
+
+.contenedor{
+    border: 1px solid rgba(255, 255, 255, 0.01);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1);
+    color: #232323;
+    backdrop-filter: blur(4px);
+    background: rgba(255, 255, 255, 0.30);
+    flex-basis: 200px;
+    height: auto;
+    padding: 20px 20px;
+}
+
+.contenedor__parrafo{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
