--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,11 @@ span{
     background: rgba(255, 255, 255, 0.30);
     flex-basis: 200px;
     height: auto;
-    width: 420px;
+    width: 410px;
     padding: 20px 20px;
 }
 
-.contenedor__menu{
+.contenedor__intro{
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -117,3 +117,28 @@ button:hover{
     background-color: #232323ce;
 }
 
+/*INDEX 3*/
+header{
+    display: flex;
+    justify-content: center;
+}
+@media (min-width:880px){
+    .menu{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+.clase{
+    text-align: center;
+    width: 400px;
+}
+
+.button-class{
+    width: 200px;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+}
