--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/*
+-----ESTILOS GLOBALES-----
+*/
 html{
     box-sizing: border-box;
     height: 100%;
@@ -15,70 +18,13 @@ html{
 }
 
 body{
+    display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: antiquewhite;
     height: auto;
 }
 
-h1{ font-size: 60px; }
-a{
-    text-decoration: none;
-    color: white;
-}
-
-span{
-    font-size: 120px;
-    font: bold;
-}
-
-.titulo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.principal{
-    display: flex;
-    flex-direction: column;
-}
-
-.subtitulo{
-    text-align: center;
-}
-
-.formulario{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.campo{
-    font-size: 15px;
-}
-
-.input-text{
-    border: none;
-    height: 25px;
-    width: 300px;
-    border-radius: 10px;
-}
-
-.buttonPrincipal{
-    background-color: #555555;
-    height: 30px;
-    width: 150px;
-    border-radius: 12px;
-    border: none;
-}
-
-/*INDEX 2*/
 .contenedor{
     border: 1px solid rgba(255, 255, 255, 0.01);
     border-radius: 16px;
@@ -91,6 +37,78 @@ span{
     width: 410px;
     padding: 20px 20px;
 }
+
+/*INDEX1*/
+
+@media (min-width:550px) {
+    h1{ 
+        font-size: 60px;
+        margin-block-end: 0px;
+    }
+    span{
+        font-size: 120px;
+        font: bold;
+        margin-block-start: 0px;
+    }
+}
+
+.titulo{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+.principal{
+    display: flex;
+    flex-direction: column;
+}
+
+.subtitulo{
+    text-align: center;
+    margin-block-end: 0px;
+    font-size: 30px;
+}
+
+.contenedor__parrafo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-block-start: 0px;
+}
+
+.campo{
+    font-size: 15px;
+    margin: 5px;
+    border: none;
+}
+
+input{
+    width: 290px;
+    height: 30px;
+}
+
+.input-text{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    overflow: hidden;
+}
+
+.buttonPrincipal{
+    background-color: #555555;
+    height: 35px;
+    width: 180px;
+    border-radius: 12px;
+    border: none;
+}
+
+/*INDEX 2*/
 
 .contenedor__intro{
     text-align: center;
